--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "typescript": "3.6.4"
+    "typescript": "~3.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
